--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,20 +1,35 @@
 <resources>
     <string name="app_name">Popular Movies</string>
-<string name="activity_settings">Settings</string>
-<string name="activity_details">Movie Details</string>
-
+    <string name="activity_settings">Settings</string>
+    <string name="activity_details">Movie Details</string>
+    <string name="vote_average">TMDb: %1$s/10</string>
+    <string name="title_movie_list">Popular Movies</string>
     <string name="action_settings">Settings</string>
 
     <string name="category_display_preferences">Display Preferences</string>
-
-    <string name="display_preferences_sort_order_title">Sort Order</string>
-    <string name="display_preferences_sort_order_desc">Select sort order for the movies</string>
-    <string name="display_preferences_sort_order_key">sortType</string>
-    <string name="display_preferences_sort_default_value">popularity.description</string>
+    <string name="add_to_favorites">Add Favorites </string>
+    <string name="top_rated">Top Rated</string>
+    <string name="most_popular">Most Popular</string>
+    <string name="favorites">favorites</string>
+    <string name="added_to_favorites">Added to Favorites</string>
+    <string name="removed_from_favorites">Removed from Favorites</string>
+    <string name="sort_by">Sort_By</string>
+    <string name="watch_trailer">Watch Preview</string>
+    <string name="action_fav">Favorite</string>
+    <string name="action_share">Share</string>
+    <string name="action_favorite">Favorites</string>
+    <string name="action_sort_popularity">Sort by Popularity</string>
+    <string name="action_sort_user_rating">Sort by User rating</string>
+    <string name="action_show_favorites">Show Favorites</string>
     <string name="sort_array_item_1">Most Popular</string>
     <string name="sort_array_item_2">Highest-rated</string>
+    <string name="add_to_favorite">Add Favorites</string>
+    <string name="remove_from_favorites">Remove From Favorites</string>
     <string name="pref_popular_value">popularity.desc</string>
     <string name="pref_top_rated_value">vote_average.desc</string>
+    <string name="sort_array_item_3">Favorites</string>
+    <string name="share_trailer">Share Trailer</string>
+    <string name="pref_favorite_value">favorite.desc</string>
     <string name="title_activity_movie_detail">MovieDetailActivity</string>
 
 </resources>
